--- a/chest.html
+++ b/chest.html
@@ -3,7 +3,7 @@
         <meta charset="utf-8">
         <title>LoD Pirate Chest</title>
         <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
-        <script src="chest-script.js"></script>
+        <script src="chest.js"></script>
     </head>
     <body>
         <main class="container">
