--- a/chest.html
+++ b/chest.html
@@ -17,7 +17,8 @@
             </hgroup>
             <ol id="attempts"></ol>
             <input type="text" id="guess" placeholder="Guess" required>
-            Rules: Type three of the four given numbers in any order while attempting to match the hidden pattern.
+            <div>Rules: Type three of the four given numbers in any order while attempting to match the hidden pattern.</div>
+            <a href="solver.html">Solver</a>
         </main>
     </body>
 </html>
